apps/nextcloud-aio/nextcloud-aio-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-aio
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      # sectionName: nextcloud-6j0-org
  hostnames:
    - nextcloud.6j0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-aio-apache
          port: 8443
